handled some sonar issues